MSS-1997 mini-card spacing fixed

--- a/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/_miniCart.scss
+++ b/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/_miniCart.scss
@@ -482,7 +482,11 @@
             /* Hide scrollbar for IE and Edge */
             -ms-overflow-style: none;
             padding-top: rem(25);
-
+            
+            .mini-cart-fixed {
+                margin: 0 12px;    
+            }
+            
             .row {
 
                 &:last-child {
